remove 'pemb 1' and 'pemb 2'

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -206,31 +206,9 @@
                     <div class="row">
                         <div class="col mx-2 p-3 rounded border border-peach">
                             <h3 class="mb-0 mt-1">{{ pay_verified_1 }} <small class="text-muted h6 judul">siswa</small></h3>
-                            <h4 class="mb-1 judul"><a href="?up_berkas_pendaftaran"><span class="badge badge-peach">VERIFIKASI PEMB. 1</span></a></h4>
+                            <h4 class="mb-1 judul"><a href="?up_berkas_pendaftaran"><span class="badge badge-peach">VERIFIKASI PEMB. DFT ULANG</span></a></h4>
                         </div>
 
-                        <div class="col mx-2 p-3 rounded border border-lime">
-                            <h3 class="mb-0 mt-1">{{ pay_verified_2 }} <small class="text-muted h6 judul">siswa</small></h3>
-                            <h4 class="mb-1 judul"><a href="?up_berkas_pendaftaran_verified"><span class="badge badge-lime">VERIFIKASI PEMB. 2</span></a></h4>
-                        </div>
-
-                        <div class="col mx-2 p-3 rounded border border-ice">
-                            <h3 class="mb-0 mt-1">{{ pay_verified_3 }} <small class="text-muted h6 judul">siswa</small></h3>
-                            <h4 class="mb-1 judul"><a href="?verified_profile"><span class="badge badge-ice">VERIFIKASI PEMB. 3</span></a></h4>
-                        </div>
-                    </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- INFO PEMBAYARAN -->
-            <div class="card mb-3">
-              <div class="card-header">
-                Info Verifikasi Data
-              </div>
-              <div class="card-body">
-                <div class="card-text">
-                    <div class="row">
                         <div class="col mx-2 p-3 rounded border border-lime">
                             <h3 class="mb-0 mt-1">{{ report_counter }} <small class="text-muted h6 judul">siswa</small></h3>
                             <h4 class="mb-1 judul"><a href="?up_berkas_pendaftaran_verified"><span class="badge badge-lime">VERIFIKASI DATA DFTR ULANG</span></a></h4>
