remove "pembayaran daftar ulang" stats

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -181,11 +181,11 @@
                             <h1 class="red-text font-weight-bold mb-0 mt-2">{{ accepted_part }}</h1>
                             <span class="text-secondary">Diterima</span>
                         </div>
-                        <div class="number-item">
-                            <img src="{% static 'homepage/images/daftar-ulang.svg' %}" alt="">
-                            <h1 class="red-text font-weight-bold mb-0 mt-2">{{ re_reg_part }}</h1>
-                            <span class="text-secondary">Pendaftar Ulang</span>
-                        </div>
+                        <!-- <div class="number-item"> -->
+                        <!--     <img src="{% static 'homepage/images/daftar-ulang.svg' %}" alt=""> -->
+                        <!--     <h1 class="red-text font-weight-bold mb-0 mt-2">{{ re_reg_part }}</h1> -->
+                        <!--     <span class="text-secondary">Pendaftar Ulang</span> -->
+                        <!-- </div> -->
                     </div>
                 </div>
             </div>
